tests/baselines/reference/jsxReactReferencedImport.errors.txt
file.tsx(3,1): error TS6133: 'React' is declared but its value is never read.


==== file.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import React from 'react';
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6133: 'React' is declared but its value is never read.
    
    export function Component1() {
      return <div />;
    }
    